feat: allowing creating a subcategory

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -14,8 +14,13 @@
   "CALENDAR.LABEL": "Informe a data:",
   "CATEGORIES.LABEL": "Selecione a categoria:",
   "CATEGORIES.CREATE": "Criar categoria",
+  "CATEGORIES.NAME": "Nome da categoria:",
   "SUBCATEGORIES.LABEL": "Selecione a subcategoria:",
   "SUBCATEGORIES.CREATE": "Criar subcategoria",
+  "SUBCATEGORIES.NAME": "Nome da subcategoria:",
+  "SUBCATEGORIES.COSTING": "Custo da subcategoria:",
+  "SUBCATEGORIES.COSTING.FIXED": "Fixo",
+  "SUBCATEGORIES.COSTING.VARIABLE": "Variável",
   "VALUE.LABEL": "Informe o valor:",
   "OBSERVATION.LABEL": "Alguma observação?",
   "TRANSACTION.SUBMIT": "Adicionar transação",
