feat: allowing create a transaction of INVESTIMENT type

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -12,6 +12,7 @@
   "TRANSACTION_TYPE.LABEL": "Selecione o tipo de transação",
   "TRANSACTION_TYPE.EXPENSE": "Despesa",
   "TRANSACTION_TYPE.INCOME": "Receita",
+  "TRANSACTION_TYPE.INVESTIMENT": "Investimento",
   "CALENDAR.LABEL": "Informe a data:",
   "CATEGORIES.LABEL": "Selecione a categoria:",
   "CATEGORIES.CREATE": "Criar categoria",
