feat: adding AppliedFilters component

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -30,17 +30,21 @@
   "TRANSACTION.SUBMIT": "Adicionar transação",
 
   "FILTERS.PERIOD": "Período:",
-  "FILTERS.TRANSACTION_TYPE": "Tipo de transação:",
+  "FILTERS.TRANSACTION_TYPE": "Tipo de transação",
   "FILTERS.INCOMES": "Receitas",
+  "FILTERS.INCOME": "Receitas",
   "FILTERS.EXPENSES": "Despesas",
+  "FILTERS.EXPENSE": "Despesas",
   "FILTERS.INVESTIMENTS": "Investimentos",
-  "FILTERS.CATEGORY": "Categoria:",
-  "FILTERS.SUBCATEGORY": "Subcategoria:",
-  "FILTERS.GROUP": "Agrupar:",
+  "FILTERS.INVESTIMENT": "Investimentos",
+  "FILTERS.CATEGORY": "Categoria",
+  "FILTERS.SUBCATEGORY": "Subcategoria",
+  "FILTERS.GROUP": "Agrupar",
   "FILTERS.GROUP.TRANSACTION_TYPE": "Tipo de transação",
   "FILTERS.GROUP.CATEGORY": "Categoria",
   "FILTERS.GROUP.SUBCATEGORY": "Subcategoria",
   "FILTERS.FILTER": "Filtrar",
+  "FILTERS.CLEAR": "Limpar filtros",
 
   "CALENDAR.LABEL": "Informe a data:",
 
