feat: moving Date to first step and adding mask in value input

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -16,6 +16,7 @@
 
   "TRANSACTIONS": "Transações",
   "TRANSACTIONS.FETCH.ERROR": "Erro ao tentar carregar transações",
+  "TRANSACTIONS.CREATE.SUCCESS": "Transação criada com sucesso",
   "TRANSACTIONS.CREATE.ERROR": "Erro ao tentar criar transação",
   "TRANSACTIONS.COUNT": "{{count}} transações encontradas",
   "TRANSACTIONS.EMPTY": "Nenhuma transação encontrada",
