fix: removing unnecessary :

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -30,7 +30,7 @@
   "TRANSACTION_TYPE.INVESTIMENT": "Investimento",
   "TRANSACTION.SUBMIT": "Adicionar transação",
 
-  "FILTERS.PERIOD": "Período:",
+  "FILTERS.PERIOD": "Período",
   "FILTERS.TRANSACTION_TYPE": "Tipo de transação",
   "FILTERS.INCOMES": "Receitas",
   "FILTERS.INCOME": "Receitas",
