--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -59,19 +59,30 @@
   "CATEGORIES.CREATE.ERROR": "Erro ao tentar criar categoria",
   "CATEGORIES.NAME": "Nome da categoria:",
   "CATEGORIES.EMPTY": "Nenhuma categoria encontrada",
+  "CATEGORIES.NEW": "Nova categoria",
+  "CATEGORIES.NEW.SUCCESS": "Nova categoria criada com sucesso",
+  "CATEGORIES.NEW.ERROR": "Erro ao criar nova categoria",
   "CATEGORIES.DELETE": "Apagar categoria",
   "CATEGORIES.DELETE.DESCRIPTION": "Você tem certeza que gostaria de apagar a categoria \"{{category}}\" de \"{{transactionType}}\"?",
   "CATEGORIES.EDIT": "Editar categoria",
   "CATEGORIES.EDIT.DESCRIPTION": "Digite o novo nome da categoria:",
 
+  "SUBCATEGORIES.NEW": "Nova subcategoria",
+  "SUBCATEGORIES.NEW.SUCCESS": "Nova subcategoria criada com sucesso",
+  "SUBCATEGORIES.NEW.ERROR": "Erro ao criar nova subcategoria",
   "SUBCATEGORIES.FETCH.ERROR": "Erro ao tentar carregar subcategorias",
   "SUBCATEGORIES.LABEL": "Selecione a subcategoria:",
   "SUBCATEGORIES.CREATE": "Criar subcategoria",
   "SUBCATEGORIES.CREATE.ERROR": "Erro ao tentar criar subcategoria",
-  "SUBCATEGORIES.NAME": "Nome da subcategoria:",
+  "SUBCATEGORIES.NAME": "Digite o nome da subcategoria:",
   "SUBCATEGORIES.COSTING": "Custo da subcategoria:",
   "SUBCATEGORIES.COSTING.FIXED": "Fixo",
   "SUBCATEGORIES.COSTING.VARIABLE": "Variável",
+  "SUBCATEGORIES.EMPTY": "Nenhuma subcategoria encontrada",
+  "SUBCATEGORIES.DELETE": "Apagar subcategoria",
+  "SUBCATEGORIES.DELETE.DESCRIPTION": "Você tem certeza que gostaria de apagar a subcategoria \"{{subcategory}}\" da categoria \"{{category}}\" de \"{{transactionType}}\"?",
+  "SUBCATEGORIES.EDIT": "Editar subcategoria",
+  "SUBCATEGORIES.EDIT.DESCRIPTION": "Digite o novo nome da subcategoria:",
 
   "VALUE.LABEL": "Informe o valor:",
   "VALUE": "Valor:",
