feat: adding services to delete a category and a subcategory

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -64,7 +64,9 @@
   "CATEGORIES.NEW.ERROR": "Erro ao criar nova categoria",
   "CATEGORIES.DELETE": "Apagar categoria",
   "CATEGORIES.DELETE.DESCRIPTION": "Você tem certeza que gostaria de apagar a categoria <strong>{{category}}</strong> de <strong>{{transactionType}}</strong>?",
-  "CATEGORIES.DELETE.FORBIDDEN": "Você não pode apagar a categoria <strong>{{category}}</strong> de <strong>{{transactionType}}</strong>, pois existem transações cadastradas com ela",
+  "CATEGORIES.DELETE.FORBIDDEN": "Você não pode apagar a categoria <strong>{{category}}</strong> de <strong>{{transactionType}}</strong>, pois existem subcategorias vinculadas a ela",
+  "CATEGORIES.DELETE.SUCCESS": "Categoria apagada com sucesso",
+  "CATEGORIES.DELETE.ERROR": "Erro ao tentar apagar categoria",
   "CATEGORIES.EDIT": "Editar categoria",
   "CATEGORIES.EDIT.DESCRIPTION": "Digite o novo nome da categoria:",
   "CATEGORIES.EDIT.SUCCESS": "Categoria editada com sucesso",
@@ -84,7 +86,9 @@
   "SUBCATEGORIES.EMPTY": "Nenhuma subcategoria encontrada",
   "SUBCATEGORIES.DELETE": "Apagar subcategoria",
   "SUBCATEGORIES.DELETE.DESCRIPTION": "Você tem certeza que gostaria de apagar a subcategoria <strong>{{subcategory}}</strong> da categoria <strong>{{category}}</strong> de <strong>{{transactionType}}</strong>?",
-  "SUBCATEGORIES.DELETE.FORBIDDEN": "Você não pode apagar a subcategoria <strong>{{subcategory}}</strong> da categoria <strong>{{category}}</strong> de <strong>{{transactionType}}</strong>, pois existem transações cadastradas com ela",
+  "SUBCATEGORIES.DELETE.FORBIDDEN": "Você não pode apagar a subcategoria <strong>{{subcategory}}</strong> da categoria <strong>{{category}}</strong> de <strong>{{transactionType}}</strong>, pois existem transações vinculadas a ela",
+  "SUBCATEGORIES.DELETE.SUCCESS": "Subcategoria apagada com sucesso",
+  "SUBCATEGORIES.DELETE.ERROR": "Erro ao apagar subcategoria",
   "SUBCATEGORIES.EDIT": "Editar subcategoria",
   "SUBCATEGORIES.EDIT.DESCRIPTION": "Digite o novo nome da subcategoria:",
   "SUBCATEGORIES.EDIT.SUCCESS": "Subcategoria editada com sucesso",
