feat: allowing returning to home when it is in profile route

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -100,6 +100,7 @@
   "OBSERVATION.LABEL": "Alguma observação?",
   "OBSERVATION": "Observação:",
 
+  "PROFILE": "Perfil",
   "CREATE": "Criar",
   "NAME": "Nome",
   "EMAIL": "Email",
