--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -55,13 +55,14 @@
   "CATEGORIES": "Categorias e subcategorias",
   "CATEGORIES.FETCH.ERROR": "Erro ao tentar carregar categorias",
   "CATEGORIES.LABEL": "Selecione a categoria:",
+  "CATEGORIES.ADD": "Adicionar categoria",
   "CATEGORIES.CREATE": "Criar categoria",
   "CATEGORIES.CREATE.ERROR": "Erro ao tentar criar categoria",
   "CATEGORIES.NAME": "Nome da categoria:",
   "CATEGORIES.EMPTY": "Nenhuma categoria encontrada",
   "CATEGORIES.NEW": "Nova categoria",
   "CATEGORIES.NEW.SUCCESS": "Nova categoria criada com sucesso",
-  "CATEGORIES.NEW.ERROR": "Erro ao criar nova categoria",
+  "CATEGORIES.NEW.ERROR": "Erro ao criar nova categoria: {{category}}",
   "CATEGORIES.DELETE": "Apagar categoria",
   "CATEGORIES.DELETE.DESCRIPTION": "Você tem certeza que gostaria de apagar a categoria <strong>{{category}}</strong> de <strong>{{transactionType}}</strong>?",
   "CATEGORIES.DELETE.FORBIDDEN": "Você não pode apagar a categoria <strong>{{category}}</strong> de <strong>{{transactionType}}</strong>, pois existem subcategorias vinculadas a ela",
@@ -71,12 +72,14 @@
   "CATEGORIES.EDIT.DESCRIPTION": "Digite o novo nome da categoria:",
   "CATEGORIES.EDIT.SUCCESS": "Categoria editada com sucesso",
   "CATEGORIES.EDIT.ERROR": "Erro ao editar categoria",
+  "CATEGORIES.DIFFERENT.NAME": "O nome da categoria deve ser diferente das categorias já criadas nesse tipo de transação",
 
   "SUBCATEGORIES.NEW": "Nova subcategoria",
   "SUBCATEGORIES.NEW.SUCCESS": "Nova subcategoria criada com sucesso",
-  "SUBCATEGORIES.NEW.ERROR": "Erro ao criar nova subcategoria",
+  "SUBCATEGORIES.NEW.ERROR": "Erro ao criar nova subcategoria: {{subcategory}}",
   "SUBCATEGORIES.FETCH.ERROR": "Erro ao tentar carregar subcategorias",
   "SUBCATEGORIES.LABEL": "Selecione a subcategoria:",
+  "SUBCATEGORIES.ADD": "Adicionar subcategoria",
   "SUBCATEGORIES.CREATE": "Criar subcategoria",
   "SUBCATEGORIES.CREATE.ERROR": "Erro ao tentar criar subcategoria",
   "SUBCATEGORIES.NAME": "Digite o nome da subcategoria:",
@@ -93,6 +96,7 @@
   "SUBCATEGORIES.EDIT.DESCRIPTION": "Digite o novo nome da subcategoria:",
   "SUBCATEGORIES.EDIT.SUCCESS": "Subcategoria editada com sucesso",
   "SUBCATEGORIES.EDIT.ERROR": "Erro ao editar subcategoria",
+  "SUBCATEGORIES.DIFFERENT.NAME": "O nome da subcategoria deve ser diferente das subcategorias já criadas nessa categoria",
 
   "VALUE.LABEL": "Informe o valor:",
   "VALUE": "Valor:",
@@ -102,6 +106,7 @@
 
   "PROFILE": "Perfil",
   "CREATE": "Criar",
+  "ADD": "Adicionar",
   "NAME": "Nome",
   "EMAIL": "Email",
   "PHONE": "Telefone celular",
