feat: adding message about news in stats guide

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -108,6 +108,8 @@
   "OBSERVATION.LABEL": "Alguma observação?",
   "OBSERVATION": "Observação:",
 
+  "STATS.MESSAGE": "Em breve, novidades...",
+
   "CATEGORY": "Categoria:",
   "SUBCATEGORY": "Subcategoria:",
   "PROFILE": "Perfil",
