impr: adding route of settings

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -112,6 +112,7 @@
 
   "CATEGORY": "Categoria:",
   "SUBCATEGORY": "Subcategoria:",
+  "SETTINGS": "Configurações",
   "PROFILE": "Perfil",
   "CREATE": "Criar",
   "CREATED": "Criado",
