feat: creating Summary at the Home screen

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -15,12 +15,18 @@
   "HAS.ACCOUNT": "Já tem conta?",
   "DO.LOGIN": "Faça login aqui",
 
+  "SUMMARY": "Resumo de {{month}}",
+  "SUMMARY.INCOMES": "Receitas de",
+  "SUMMARY.EXPENSES": "Despesas de",
+  "SUMMARY.INVESTIMENTS": "Investimentos de",
+  "SUMMARY.BALANCE": "Saldo de",
+
   "TRANSACTIONS": "Transações",
   "TRANSACTIONS.FETCH.ERROR": "Erro ao tentar carregar transações",
   "TRANSACTIONS.CREATE.SUCCESS": "Transação criada com sucesso",
   "TRANSACTIONS.CREATE.ERROR": "Erro ao tentar criar transação",
   "TRANSACTIONS.COUNT": "{{count}} transações encontradas",
-  "TRANSACTIONS.LAST.UPDATE": "Última atualização feita por você em {{date}} às {{time}}",
+  "TRANSACTIONS.LAST.UPDATE": "Fiz a última atualização em {{date}} às {{time}}",
   "TRANSACTIONS.EMPTY": "Nenhuma transação encontrada",
   "TRANSACTIONS.BALANCE": "Saldo:",
   "TRANSACTIONS.INCOMES": "Receitas",
