--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -40,6 +40,12 @@
   "TRANSACTION_TYPE.EXPENSE": "Despesa",
   "TRANSACTION_TYPE.INCOME": "Receita",
   "TRANSACTION_TYPE.INVESTIMENT": "Investimento",
+  "TRANSACTION_PAYMENT.LABEL": "Selecione o tipo de pagamento:",
+  "PAYMENT_TYPE.CASH": "Dinheiro",
+  "PAYMENT_TYPE.BILLET": "Boleto",
+  "PAYMENT_TYPE.PIX": "PIX",
+  "PAYMENT_TYPE.DEBT": "Débito",
+  "PAYMENT_TYPE.CREDIT": "Crédito",
   "TRANSACTION.SUBMIT": "Adicionar transação",
   "TRANSACTIONS.UPDATE.SUCCESS": "Transação atualizada com sucesso",
   "TRANSACTIONS.UPDATE.ERROR": "Erro ao atualizar transação",
@@ -60,6 +66,14 @@
   "FILTERS.INVESTIMENT": "Investimentos",
   "FILTERS.CATEGORY": "Categoria",
   "FILTERS.SUBCATEGORY": "Subcategoria",
+  "FILTERS.TRANSACTION_PAYMENT": "Tipo de pagamento",
+  "FILTERS.CASH": "Dinheiro",
+  "FILTERS.BILLET": "Boleto",
+  "FILTERS.PIX": "PIX",
+  "FILTERS.DEBT": "Débito",
+  "FILTERS.CREDIT": "Crédito",
+  "FILTERS.CARD": "Cartão",
+  "FILTERS.INSTALLMENTS": "Parcelou?",
   "FILTERS.GROUP": "Agrupar",
   "FILTERS.GROUP.TRANSACTION_TYPE": "Tipo de transação",
   "FILTERS.GROUP.CATEGORY": "Categoria",
@@ -118,6 +132,12 @@
   "VALUE.LABEL": "Informe o valor:",
   "VALUE": "Valor:",
 
+  "CARD.LABEL": "Cartão utilizado",
+  "CARD.CREATE": "Criar cartão",
+
+  "INSTALLMENTS.LABEL": "Parcelou?",
+  "INSTALLMENTS.NO": "Não, foi pago a vista",
+
   "OBSERVATION.LABEL": "Alguma observação?",
   "OBSERVATION": "Observação:",
 
@@ -132,11 +152,21 @@
   "CARDS.EXPIRATION": "Dia de fechamento da fatura",
   "CARDS.PAYMENT": "Dia de pagamento da fatura",
   "CARDS.TYPE": "Tipo do cartão",
+  "CARDS.FETCH.ERROR": "Erro ao tentar carregar cartões",
   "CARDS.NEW.SUCCESS": "Cartão criado com sucesso",
   "CARDS.NEW.ERROR": "Erro ao criar novo cartão: {{card}}",
-  "CARDS.DEBIT": "Débito",
+  "CARDS.DEBT": "Débito",
   "CARDS.CREDIT": "Crédito",
-  "CARDS.BOTH": "Ambos",
+  "CARDS.BOTH": "Crédito e Débito",
+  "CARDS.EXPIRATION_DAY": "Fechamento da fatura dia:",
+  "CARDS.PAYMENT_DAY": "Pagamento da fatura dia:",
+  "CARDS.EDIT": "Editar cartão",
+  "CARDS.EDIT.SUCCESS": "Cartão editado com sucesso",
+  "CARDS.EDIT.ERROR": "Erro ao editar cartão",
+  "CARDS.REMOVE": "Remover cartão",
+  "CARDS.REMOVE.CONFIRM": "Você tem certeza que deseja remover o cartão {{card}}?",
+  "CARDS.REMOVE.SUCCESS": "Cartão removido com sucesso",
+  "CARDS.REMOVE.ERROR": "Erro ao remover cartão",
 
   "CATEGORY": "Categoria:",
   "SUBCATEGORY": "Subcategoria:",
@@ -156,6 +186,7 @@
   "SAVE": "Salvar",
   "EDIT": "Editar",
   "DELETE": "Apagar",
+  "REMOVE": "Remover",
   "CLOSE": "Fechar",
   "AT": " às ",
   "LOST": "Parece que alguém se perdeu por aqui",
